--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.6.0",
     "jsdom": "^17.0.0",
     "leetcode-api-ts": "^1.1.1",
+    "moment": "^2.29.1",
     "mongodb": "^4.1.0",
     "mongodb-core": "^3.2.7",
     "mongoose": "^5.13.7",
