--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "axios": "^0.21.1",
     "cookie": "0.4.1",
     "cryptr": "^6.0.2",
+    "fs": "^0.0.1-security",
     "interweave": "^12.9.0",
     "jquery": "^3.6.0",
     "jsdom": "^17.0.0",
+    "json-as-xlsx": "^2.3.10",
     "leetcode-api-ts": "^1.1.1",
     "moment": "^2.29.1",
     "mongodb": "^4.1.0",
@@ -37,7 +39,8 @@
     "swr": "^0.5.5",
     "tinymce": "^5.9.1",
     "unfetch": "^4.2.0",
-    "uuid": "8.3.1"
+    "uuid": "8.3.1",
+    "xlsx": "^0.18.3"
   },
   "devDependencies": {
     "@types/jsdom": "^16.2.13",
