--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "passport": "0.4.1",
     "passport-local": "1.0.0",
     "react": "^17.0.2",
+    "react-awesome-stars-rating": "^0.13.2",
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.1.0",
     "react-google-login": "^5.2.2",
     "react-player": "^2.9.0",
+    "react-star-ratings": "^2.3.0",
     "swr": "^0.5.5",
     "tinymce": "^5.9.1",
     "unfetch": "^4.2.0",
