--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.1.0",
     "react-google-login": "^5.2.2",
+    "react-notifications": "^1.7.4",
     "react-player": "^2.9.0",
     "react-star-ratings": "^2.3.0",
+    "react-toastify": "^9.1.1",
     "swr": "^0.5.5",
     "tinymce": "^5.9.1",
     "unfetch": "^4.2.0",
