--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@hapi/iron": "6.0.0",
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
-    "@tinymce/tinymce-react": "^3.12.6",
+    "@tinymce/tinymce-react": "^5.0.1",
     "@types/jquery": "^3.5.6",
-    "axios": "^0.21.1",
+    "axios": "^1.6.8",
     "cookie": "0.4.1",
     "cryptr": "^6.0.2",
     "fs": "^0.0.1-security",
@@ -26,14 +26,14 @@
     "mongodb": "^4.1.0",
     "mongodb-core": "^3.2.7",
     "mongoose": "^5.13.7",
-    "next": "12.1.0",
+    "next": "^14.2.3",
     "next-connect": "0.8.1",
     "node-fetch": "^2.6.1",
-    "passport": "0.4.1",
+    "passport": "^0.7.0",
     "passport-local": "1.0.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-awesome-stars-rating": "^0.13.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-full-screen": "^1.1.0",
     "react-google-login": "^5.2.2",
     "react-notifications": "^1.7.4",
@@ -41,18 +41,21 @@
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.1.1",
     "swr": "^0.5.5",
-    "tinymce": "^5.9.1",
+    "tinymce": "^7.0.1",
     "unfetch": "^4.2.0",
     "uuid": "8.3.1",
     "xlsx": "^0.18.3"
   },
   "devDependencies": {
     "@types/jsdom": "^16.2.13",
-    "@types/react": "^17.0.15",
+    "@types/react": "^18.3.1",
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.2",
     "tailwindcss": "^2.1.4",
     "typescript": "^4.3.5"
+  },
+  "engines": {
+    "node": "20.12.2"
   }
 }
