--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@hapi/iron": "6.0.0",
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
+    "@react-oauth/google": "^0.12.2",
     "@tinymce/tinymce-react": "^5.0.1",
     "@types/jquery": "^3.5.6",
     "axios": "^1.6.8",
     "cookie": "0.4.1",
     "cryptr": "^6.0.2",
     "fs": "^0.0.1-security",
-    "interweave": "^12.9.0",
+    "interweave": "^12.8.0",
     "jquery": "^3.6.0",
     "jsdom": "^17.0.0",
     "json-as-xlsx": "^2.3.10",
@@ -35,7 +36,6 @@
     "react-awesome-stars-rating": "^0.13.2",
     "react-dom": "^18.2.0",
     "react-full-screen": "^1.1.0",
-    "react-google-login": "^5.2.2",
     "react-notifications": "^1.7.4",
     "react-player": "^2.9.0",
     "react-star-ratings": "^2.3.0",
@@ -56,6 +56,6 @@
     "typescript": "^4.3.5"
   },
   "engines": {
-    "node": "20.12.2"
+    "node": ">=20.0.0"
   }
 }
